tests/ui/premature_query_namespace.stderr
error[E0432]: unresolved import `moirai::query::QuerySpec`
 --> tests/ui/premature_query_namespace.rs:1:5
  |
1 | use moirai::query::QuerySpec;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^ no `QuerySpec` in `query`

error[E0603]: module `query` is private
 --> tests/ui/premature_query_namespace.rs:1:13
  |
1 | use moirai::query::QuerySpec;
  |             ^^^^^ private module
  |
note: the module `query` is defined here
 --> src/lib.rs
  |
  | mod query;
  | ^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/premature_query_namespace.rs:1:30
  |
1 | use moirai::query::QuerySpec;
  |                              ^ consider adding a `main` function to `$DIR/tests/ui/premature_query_namespace.rs`
